# dog_vins_localization

./: .editorconfig  .gitattributes  .gitignore  README.md  README_log.md
vins_ws/src/: opencv4_compat.hpp
vins_ws/src/camera_models/: CMakeLists.txt
vins_ws/src/dog_robot_bridge/: CMakeLists.txt  package.xml
vins_ws/src/dog_robot_bridge/include/dog_robot_bridge/: protocol.h
vins_ws/src/dog_robot_bridge/launch/: dog_robot_state_bridge.launch
vins_ws/src/dog_robot_bridge/src/: dog_qnx_state_bridge.cpp
vins_ws/src/dog_vins_bringup/: CMakeLists.txt  README.md  TEST_GUIDE.md  package.xml
vins_ws/src/dog_vins_bringup/config/: dog_color_pinhole_1280x720.yaml  dog_d435i_infra_left_640x480.yaml  dog_d435i_stereo_config.yaml  dog_d435i_stereo_leg_odom_config.yaml  dog_mono_d435i_internal_imu_config.yaml  dog_mono_imu_config.yaml  dog_vins_external_fusion.yaml  dog_vins_localization.rviz
vins_ws/src/dog_vins_bringup/launch/: dog_external_fusion.launch  dog_mono_imu_passive.launch  dog_realsense_d435i_color_imu.launch  dog_realsense_d435i_stereo.launch  dog_standalone_d435i_stereo.launch  dog_standalone_d435i_stereo_leg_odom.launch  dog_standalone_d435i_stereo_leg_odom_with_bridge.launch  dog_standalone_d435i_vins.launch  dog_vins_rviz.launch
vins_ws/src/dog_vins_bringup/scripts/: vins_odom_adapter.py
vins_ws/src/loop_fusion/: CMakeLists.txt
vins_ws/src/vins_estimator/: CMakeLists.txt  package.xml
vins_ws/src/vins_estimator/src/: rosNodeTest.cpp
vins_ws/src/vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_ws/src/vins_estimator/src/factor/: leg_odom_factor.cpp  leg_odom_factor.h
