<?xml version="1.0"?>
<package format="2">
  <name>dog_vins_bringup</name>
  <version>0.1.0</version>
  <description>Machine-dog specific VINS-Fusion bringup files.</description>

  <maintainer email="todo@example.com">dog_vins_localization</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>vins</exec_depend>
  <exec_depend>dog_robot_bridge</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslaunch</exec_depend>
</package>
